// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Should match snapshot - \`checked\` 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  width: 48px;
  height: 24px;
}

.c3 {
  width: 0;
  height: 0;
  opacity: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #B4B4B4;
  border-radius: 24px;
  background-color: rgba(255,255,255,1);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  cursor: pointer;
}

.c4:before {
  content: '';
  position: absolute;
  bottom: 2px;
  left: 3px;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: #B4B4B4;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c4:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 9px;
  visibility: hidden;
  width: 4px;
  height: 9px;
  border: solid #F16622;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c2:disabled ~ .c4 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2:checked ~ .c4 {
  border-color: #F16622;
  background-color: #F16622;
}

.c2:checked ~ .c4:before {
  background-color: rgba(255,255,255,1);
  -webkit-transform: translateX(22px);
  -ms-transform: translateX(22px);
  transform: translateX(22px);
}

.c2:checked ~ .c4:after {
  visibility: visible;
  -webkit-transform: translateX(22px) rotate(45deg);
  -ms-transform: translateX(22px) rotate(45deg);
  transform: translateX(22px) rotate(45deg);
}

.c2:active:not(:disabled) ~ .c4,
.c2:focus:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c2:active:checked:not(:disabled) ~ .c4,
.c2:focus:checked:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

.c0:hover .c2:not(:disabled) ~ .c4 {
  background-color: #F1F1F1;
}

.c0:hover .c2:not(:disabled):checked ~ .c4 {
  background-color: #CB5217;
}

<label
  checked=""
  class="c0 c1"
>
  <input
    checked=""
    class="c2 c3"
    type="checkbox"
  />
  <span
    class="c4"
  />
</label>
`;

exports[`Toggle Should match snapshot 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  width: 48px;
  height: 24px;
}

.c3 {
  width: 0;
  height: 0;
  opacity: 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border: 1px solid #B4B4B4;
  border-radius: 24px;
  background-color: rgba(255,255,255,1);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  cursor: pointer;
}

.c4:before {
  content: '';
  position: absolute;
  bottom: 2px;
  left: 3px;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: #B4B4B4;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c4:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 9px;
  visibility: hidden;
  width: 4px;
  height: 9px;
  border: solid #F16622;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c2:disabled ~ .c4 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c2:checked ~ .c4 {
  border-color: #F16622;
  background-color: #F16622;
}

.c2:checked ~ .c4:before {
  background-color: rgba(255,255,255,1);
  -webkit-transform: translateX(22px);
  -ms-transform: translateX(22px);
  transform: translateX(22px);
}

.c2:checked ~ .c4:after {
  visibility: visible;
  -webkit-transform: translateX(22px) rotate(45deg);
  -ms-transform: translateX(22px) rotate(45deg);
  transform: translateX(22px) rotate(45deg);
}

.c2:active:not(:disabled) ~ .c4,
.c2:focus:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(180,180,180,0.2);
}

.c2:active:checked:not(:disabled) ~ .c4,
.c2:focus:checked:not(:disabled) ~ .c4 {
  box-shadow: 0 0 0 4px rgba(241,102,34,0.2);
}

.c0:hover .c2:not(:disabled) ~ .c4 {
  background-color: #F1F1F1;
}

.c0:hover .c2:not(:disabled):checked ~ .c4 {
  background-color: #CB5217;
}

<label
  class="c0 c1"
>
  <input
    class="c2 c3"
    type="checkbox"
  />
  <span
    class="c4"
  />
</label>
`;
